# sim_ros_framework

./: .gitignore  README.md  bump_versions.bash  flake.nix  requirements-extra.txt  requirements.txt  torque.xml  xal_bng_ws_build.bash
luamod/: FEEDBACK_CONTRACT.md  (+2 more)
src/bng_xal/bng_controller/: .bumpversion.cfg  README.md  package.xml  setup.cfg  setup.py
src/bng_xal/bng_controller/bng_controller/: __init__.py  controller_integration.md  controller_interface.py  gt_state_bridge.py  high_level_controller.py  llc_scalar_commands.py  mpc_high_level_control.py  path_follower.py  path_viz.py  sensor_converters.py  sensor_dispatcher.py  torque_speed_controller.py  vehicle_config.py  vehicle_io.py  vehicle_session.py
src/bng_xal/bng_controller/bng_controller/core/: compile_commands.json  controller_core.c  controller_core_c.c  controller_core_py.py  lateral_id.py  path_follow.py  pid_tuning.py  setup.py  test_patterns.c  test_wheel_speed.c  throttle_sweep.py  torque_map.py
src/bng_xal/bng_controller/bng_controller/scripts/: analyse_llc_torque.py  generate_circle_path.py  generate_path.py  plot_gtstate_debug.py  send_override_target.py  test_llc_wr_torque.py  test_vehicle_sensor_udp.py  test_vehicle_udp.py  view_xodr.py
src/bng_xal/bng_controller/examples/: control_via_ros.py  control_via_session.py  steering_input_sweep.py
src/bng_xal/bng_controller/launch/: controller.launch.py  controller_nn.launch.py  controller_nn_mpc.launch.py
src/bng_xal/bng_controller/resource/paths/: circle_R100_N200.csv  circle_R30_N50.csv  deer.csv  loop_700_500_30_50_1-2_20.csv  octogon.csv
src/bng_xal/bng_controller/scripts/: udp-test.py
src/bng_xal/bng_controller/test/: conftest.py  test_bng_control_cmd.py  test_llc_scalar_commands.py  test_sensor_converters.py  test_vehicle_config.py  test_vehicle_io.py
src/bng_xal/bng_msgs/: .bumpversion.cfg  CMakeLists.txt  MESSAGES.md  README.md  package.xml
src/bng_xal/bng_msgs/msg/: BasicStateMsg.msg  BngControlCmd.msg  BngGpsMsg.msg  BngImuMsg.msg  BngVehicleStateMsg.msg  FrenetStateMsg.msg  GtPath.msg  GtStateMsg.msg  HLCMsg.msg  LowLevelCommandMsg.msg  MPCSolution.msg  MpcHorizon.msg  PathSampleMsg.msg  ReducedGtStateMsg.msg  VehicleOnSurface.msg
src/bng_xal/bng_msgs/srv/: ExecuteRequest.srv  GetRefTrajInfo.srv  MPConfig.srv  OverrideTargets.srv  StartLogger.srv
src/bng_xal/bng_simulator/: README.md  package.xml  setup.cfg  setup.py
src/bng_xal/bng_simulator/bng_simulator/: __init__.py  logger_process.py  sim_manager_node.py
src/bng_xal/bng_simulator/bng_simulator/core/: attach_manager.py  request_handler.py  scenario_builder.py  simulation_manager.py  vehicle_properties.py  xlab_api.py
src/bng_xal/bng_simulator/bng_simulator/scripts/: find_test_ema_gtstate.py  run_simulator.py  sim_control.py  sim_shell.py  start_logs.py
src/bng_xal/bng_simulator/bng_simulator/utils/: config_manager.py  io_dict_utils.py  log_session.py  logger_utils.py  math_op.py  resource_manager.py  scenario_compose.py  services_utils.py  vehicle_io_config.py
src/bng_xal/bng_simulator/bng_simulator/vehicle/: manager.py
src/bng_xal/bng_simulator/bng_simulator/vehicle/controllers/: __init__.py  base.py
src/bng_xal/bng_simulator/bng_simulator/vehicle/controllers/custom/: low_level_controller.py
src/bng_xal/bng_simulator/bng_simulator/vehicle/sensors/: __init__.py  base.py
src/bng_xal/bng_simulator/bng_simulator/vehicle/sensors/builtin/: advanced_imu.py  basic_state.py
src/bng_xal/bng_simulator/bng_simulator/vehicle/sensors/custom/: GtState.py
src/bng_xal/bng_simulator/config/plotjugger/: torque.xml
src/bng_xal/bng_simulator/config/rviz/: path.rviz
src/bng_xal/bng_simulator/config/scenarios/: basic_scenario.yaml  etk_scenario.yaml  llc_pid_tune.yaml  nn_mpc_scenario.yaml  nn_scenario.yaml  path_follow.yaml  sensors_only.yaml  tech_scenario.yaml  throttle_sweep.yaml
src/bng_xal/bng_simulator/config/vehicles/: bolide_350.yaml  sunburst2_drift_pro.yaml  utv_wild.yaml
src/bng_xal/bng_simulator/examples/: check_service_requests.ipynb  create_vehicle_config.ipynb  data_utils.py  export_map_beamng.ipynb  logging_utils.py  steering_mapping.ipynb  step_response_check.ipynb  test_load_log.ipynb  test_pure_pursuit.ipynb  test_torque_speed_controller.ipynb  torque_experiments.ipynb  torque_mapping.ipynb  torque_model_training.ipynb  torque_model_training_v2.ipynb  torque_model_training_v2_old.ipynb  torque_model_training_v3.ipynb
src/bng_xal/bng_simulator/examples/low_level_model/: data_utils.py  engine_model.py  environment.py  load_beamng_data.py  logging_utils.py  spaces.py  train_engine_model.ipynb  train_rl.py  train_rl_engine.ipynb  wrappers.py
src/bng_xal/bng_simulator/examples/training_files/test_/: config.yaml
src/bng_xal/bng_simulator/examples/training_files/test__/: config.yaml
src/bng_xal/bng_simulator/examples/training_files/test____/: config.yaml
src/bng_xal/bng_simulator/examples/training_files/test______/: config.yaml
src/bng_xal/bng_simulator/launch/: basic.launch.py  simulator.launch.py
src/bng_xal/bng_simulator/scripts/: sim_shell.py  start_logs.py
src/bng_xal/bng_simulator/test/: conftest.py  test_math_op.py  test_scenario_compose.py  test_vehicle_io_config.py
(+136 files in other folders)
