<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bng_controller</name>
  <version>0.2.0</version>
  <description>High-level controller for BeamNG simulation</description>
  <maintainer email="44554692+comejv@users.noreply.github.com">comev</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>bng_msgs</depend>
  <depend>bng_simulator</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
